# kns

./: Cargo.toml  README.md  build.rs
include/: compile_flags.txt  errno.h  sched.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
include/sys/: mman.h  types.h
rpmalloc/: malloc.c  rpmalloc.c  rpmalloc.h
src/: errno.rs  fcntl.rs  internal.rs  lib.rs  linux.rs  stddef.rs  stdio.rs  stdlib.rs  string.rs  strings.rs  sys.rs  time.rs  unistd.rs
src/crt0/: _start.asm
src/internal/: alloc.rs  elf.rs  errno.rs  sync.rs
src/linux/: futex.rs
src/string/: memcpy.asm  memmove.asm  memset.asm
src/sys/: mman.rs  stat.rs  time.rs  types.rs
syscall/: Cargo.toml
syscall/src/: lib.rs
test/: cat.c  compile_flags.txt  readfile.c  write_stdout.c
