[package]
name = "kns-syscall"
version = "0.0.0"
authors = ["Gregory Meyer <me@gregjm.dev>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = 2
lto = "thin"
incremental = true
codegen-units = 1
